--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <body>
 
 <div class="left-side">
-  <div class="logo-icon"></div>
-  <div class="mockup-template"></div>
+  <img src="./images/logo.svg" alt="logo of Huddle" class="logo-icon">
+  <img src="./images/illustration-mockups.svg" alt="ilustation of mockup" class="mockup-template">
 </div>
 <div class="right-side">
   <h1 class="header">Build The Community Your Fans Will Love</h1>
