--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <h1 class="header">Build The Community Your Fans Will Love</h1>
   <p class="description">Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
     Create connections with your users as you engage in genuine discussion.</p>
-    <button>Register</button>
+    <button class="btn">Register</button>
     <div class="icons">
       <i class="fa-brands fa-facebook-f"></i>
       <i class="fa-brands fa-twitter"></i>
